objects/AME_project_cloud_Project_Resource__c.object
<CustomObject>
    <fields>
        <fullName>AME_project_cloud_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sets the order of resources for a Project Charter</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charter</label>
        <referenceTo>AME_project_cloud_Project_Charter__c</referenceTo>
        <relationshipLabel>Project Resources</relationshipLabel>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Process Owner</fullName>
                </value>
                <value>
                    <fullName>Business Project lead</fullName>
                </value>
                <value>
                    <fullName>Business Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Core Team</fullName>
                </value>
                <value>
                    <fullName>Data Steward</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>IT Project lead</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Steering committee member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Project Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>